nor run in PID 1 and run as non root user

--- a/Dockerfile.runtime
+++ b/Dockerfile.runtime
@@ -1,4 +1,4 @@
-FROM devdocker.mulesoft.com:18078/base/ubuntu:trusty-0.0.8-797-gab3a025
+FROM devdocker.mulesoft.com:18078/base/ubuntu:trusty-1.5.0-31-g1dc737a
 
 # Intall build dependencies
 RUN apt-get update \
@@ -6,11 +6,18 @@ RUN apt-get update \
       python \
  && rm -rf /var/lib/apt/lists/*
 
-RUN mkdir -p /usr/src/app
+# Add app user
+RUN groupadd -r app && useradd -r -g app app
+
+# Folder to deploy artifacts
+RUN mkdir -p /usr/src/app && chown -R app:app /usr/src/app
 WORKDIR /usr/src/app
 COPY ./artifacts /usr/src/app/
 COPY Dockerfile.d/server.py /usr/src/app/
 
 EXPOSE 3000
+
+# Change to user with lower privileges
+USER app
 
 CMD python server.py '/' 3000
