--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "devDependencies": {
     "brfs": "0.2.1",
     "browserify": "13.0.0",
+    "browserify-istanbul": "^3.0.1",
     "chai": "1.9.0",
     "dombars": "0.5.2",
     "dombarsify": "0.0.3",
@@ -47,12 +48,15 @@
     "grunt-contrib-jshint": "0.8.0",
     "grunt-contrib-stylus": "0.12.0",
     "grunt-contrib-watch": "0.5.3",
+    "grunt-mocha-istanbul": "^5.0.2",
     "grunt-newer": "0.6.0",
     "grunt-shell": "0.7.0",
     "hbsify": "1.0.1",
+    "istanbul": "^0.4.5",
     "load-grunt-tasks": "0.3.0",
     "mocha": "1.17.1",
     "mocha-phantomjs-core": "2.1.1",
+    "mocha-phantomjs-istanbul": "0.0.2",
     "phantomjs-prebuilt": "2.1.14",
     "request": "2.34.0",
     "sinon": "1.7.3",
@@ -61,6 +65,8 @@
   },
   "scripts": {
     "build": "grunt build && ./generateLib.sh",
+    "coverage": "npm test && npm run generate:lcov",
+    "generate:lcov": "istanbul report --include coverage/coverage.json --dir coverage lcov",
     "grunt": "grunt",
     "start": "grunt",
     "git:version": "git-rev",
