--- a/package.json
+++ b/package.json
@@ -65,12 +65,12 @@
   },
   "scripts": {
     "build": "grunt build && ./generateLib.sh",
-    "coverage": "npm test && npm run generate:lcov",
+    "test": "npm run unitTest && npm run generate:lcov",
     "generate:lcov": "istanbul report --include coverage/coverage.json --dir coverage lcov",
     "grunt": "grunt",
     "start": "grunt",
     "git:version": "git-rev",
-    "test": "grunt test"
+    "unitTest": "grunt test"
   },
   "repository": {
     "type": "git",
