add strategyVersion and fix dependencies version

--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
   "devDependencies": {
     "brfs": "0.2.1",
     "browserify": "13.0.0",
-    "browserify-istanbul": "^3.0.1",
+    "browserify-istanbul": "3.0.1",
     "chai": "1.9.0",
     "dombars": "0.5.2",
     "dombarsify": "0.0.3",
@@ -48,11 +48,11 @@
     "grunt-contrib-jshint": "0.8.0",
     "grunt-contrib-stylus": "0.12.0",
     "grunt-contrib-watch": "0.5.3",
-    "grunt-mocha-istanbul": "^5.0.2",
+    "grunt-mocha-istanbul": "5.0.2",
     "grunt-newer": "0.6.0",
     "grunt-shell": "0.7.0",
     "hbsify": "1.0.1",
-    "istanbul": "^0.4.5",
+    "istanbul": "0.4.5",
     "load-grunt-tasks": "0.3.0",
     "mocha": "1.17.1",
     "mocha-phantomjs-core": "2.1.1",
