Update kamino dependency

--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "es6-collections": "0.2.0",
     "foreach": "2.0.4",
     "highlight.js": "8.1.0",
-    "kamino": "git://github.com/tildeio/kamino.js#v0.0.2",
+    "kamino": "0.4.0",
     "load-script": "0.0.2",
     "marked": "0.3.0",
     "mime-component": "0.0.1",
