Move to apps/v1 for the Deployment object

--- a/helm/api-tooling-api-notebook-core/templates/api-nootebook.yaml
+++ b/helm/api-tooling-api-notebook-core/templates/api-nootebook.yaml
@@ -20,7 +20,7 @@ spec:
     app: api-notebook-service
     name: api-notebook-service
 ---
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: api-notebook-service
