--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,5 @@ sudo: false
 language: node_js
 node_js:
   - "8"
-before_install:
-  - "export DISPLAY=:99.0"
-  - "sh -e /etc/init.d/xvfb start"
+services:
+  - xvfb
