--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mulesoft/api-notebook",
-  "version": "1.4.3",
+  "version": "1.4.4-SNAPSHOT",
   "description": "Executable JavaScript environment for running API examples.",
   "browserify": {
     "transform": [
@@ -18,14 +18,14 @@
     "config": "0.4.33",
     "css-component": "0.0.2",
     "domify": "1.2.1",
-    "es6-collections": "0.2.0",
+    "es6-collections": "^0.5.6",
     "foreach": "2.0.4",
     "highlight.js": "8.1.0",
     "load-script": "0.0.2",
     "marked": "0.3.0",
     "mime-component": "0.0.1",
     "normalize-css": "2.3.0",
-    "raml-1-parser": "1.1.20",
+    "raml-1-parser": "^1.1.66",
     "store": "1.3.14",
     "underscore": "1.6.0"
   },
@@ -35,11 +35,11 @@
     "browserify-istanbul": "3.0.1",
     "chai": "1.9.0",
     "dombars": "0.5.2",
-    "dombarsify": "0.0.3",
+    "dombarsify": "^0.0.3",
     "envify-config": "0.0.1",
     "git-rev-cli": "0.1.0",
     "grunt": "0.4.2",
-    "grunt-browserify": "4.0.1",
+    "grunt-browserify": "^5.3.0",
     "grunt-cli": "0.1.11",
     "grunt-contrib-clean": "0.5.0",
     "grunt-contrib-connect": "0.6.0",
@@ -50,8 +50,7 @@
     "grunt-mocha-istanbul": "5.0.2",
     "grunt-newer": "0.6.0",
     "grunt-shell": "0.7.0",
-    "hbsify": "1.0.1",
-    "istanbul": "0.4.5",
+    "nyc": "^15.0.1",
     "load-grunt-tasks": "0.3.0",
     "mocha": "1.17.1",
     "mocha-phantomjs-core": "2.1.1",
@@ -59,8 +58,9 @@
     "phantomjs-prebuilt": "2.1.14",
     "request": "2.34.0",
     "sinon": "1.7.3",
+    "hbsfy": "^2.8.1",
     "sinon-chai": "2.5.0",
-    "uglifyify": "1.2.1"
+    "uglifyify": "^5.0.2"
   },
   "scripts": {
     "build": "grunt build && ./generateLib.sh",
