--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mulesoft/api-notebook",
-  "version": "1.4.4-SNAPSHOT-1",
+  "version": "1.4.4-SNAPSHOT",
   "description": "Executable JavaScript environment for running API examples.",
   "browserify": {
     "transform": [
