--- a/package.json
+++ b/package.json
@@ -63,7 +63,7 @@
     "istanbul": "0.4.5"
   },
   "scripts": {
-    "build": "grunt build && ./generateLib.sh",
+    "build": "grunt build && tasks/generateLib.sh",
     "test": "npm run unitTest && npm run generate:lcov",
     "generate:lcov": "istanbul report --include coverage/coverage.json --dir coverage lcov",
     "grunt": "grunt",
