--- a/valkyr.yaml
+++ b/valkyr.yaml
@@ -2,8 +2,8 @@ product: api-tooling
 component: api-notebook
 asset: core
 
-strategy: node-lib
-strategyVersion: 8
+strategy: node
+strategyVersion: 12
 runTestImage: kilonova-node8-builder:v0.3.12
 version: 1.5
 nexusiq:
