--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
     "request": "2.34.0",
     "sinon": "1.7.3",
     "sinon-chai": "2.5.0",
-    "uglify-js": "3.10.0",
+    "uglify-es": "3.3.9",
     "istanbul": "0.4.5"
   },
   "scripts": {
